--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@opam/ocaml-lsp-server": "1.4.1",
     "@opam/odoc": "*",
     "@reason-native/rely": "*",
+    "refmt": "^1.13.7",
     "refmterr": "*"
   }
 }
